file upload with thumbnail update

--- a/src/main/resources/templates/uploadEx.html
+++ b/src/main/resources/templates/uploadEx.html
@@ -9,6 +9,10 @@
   <input name="uploadFiles" type="file" multiple>
   <button class="uploadBtn">Upload</button>
 
+  <div class="uploadResult">
+
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
     $(".uploadBtn").on("click", function (){
@@ -35,11 +39,23 @@
           dataType: 'json',
           success: function (result){
               console.log(result);
+              showUploadImages(result);
           },
           error: function (jqXHR, textStatus, errorThrown){
               console.log(textStatus);
           }
       });
+
+      function showUploadImages(arr){
+
+          console.log(arr);
+
+          var divArea = $(".uploadResult");
+
+          for (var i = 0; i < arr.length; i++){
+              divArea.append("<img src='/display?fileName="+arr[i].thumbnailURL+"'>");
+          }
+      }
 
     });
   </script>
