delete file update

--- a/src/main/resources/templates/uploadEx.html
+++ b/src/main/resources/templates/uploadEx.html
@@ -52,12 +52,35 @@
 
           var divArea = $(".uploadResult");
 
-          for (var i = 0; i < arr.length; i++){
-              divArea.append("<img src='/display?fileName="+arr[i].thumbnailURL+"'>");
-          }
-      }
+          var str = "";
 
-    });
+          for (var i = 0; i < arr.length; i++){
+              str += "<div>";
+              str += "<img src='/display?fileName="+arr[i].thumbnailURL+"'>";
+              str += "<button class='removeBtn' data-name='"+arr[i].imageURL+"'>REMOVE</button>";
+              str += "</div>";
+          }
+          divArea.append(str);
+      } // showUplaodImages end
+
+    }); //uploadBtn clicking
+
+    $(".uploadResult").on("click", ".removeBtn", function (e){
+
+        var target = $(this);
+        var fileName = target.data("name");
+        var targetDiv = $(this).closest("div");
+
+        console.log(fileName);
+
+        $.post('/removeFile', {fileName: fileName}, function (result){
+            console.log(result);
+            if(result === true){
+                targetDiv.remove();
+            }
+        });
+    }); // uploadResult clicking
+
   </script>
 
 </body>
