--- a/src/main/resources/templates/movie/register.html
+++ b/src/main/resources/templates/movie/register.html
@@ -145,7 +145,45 @@
                         str += "</li>";
                     });
                     uploadUL.append(str);
-                }
+                } // showResult
+
+                $(".uploadResult").on("click", "li button", function (e){
+
+                    console.log("delete a file");
+
+                    var targetFile = $(this).data("file");
+                    var targetLi = $(this).closest("li");
+
+                    $.ajax({
+                        url: '/removeFile',
+                        data: {fileName: targetFile},
+                        dataType: 'text',
+                        type: 'POST',
+                        success: function (result){
+                            alert(result);
+                            targetLi.remove();
+                        }
+                    }); // ajax
+                }); // remove button clicking
+
+                $(".btn-primary").on("click", function (e){
+                    e.preventDefault();
+
+                    var str = "";
+
+                    $(".uploadResult li").each(function (i, obj){
+                       var target = $(obj);
+
+                       str += "<input type='hidden' name='imageDTOList["+i+"].imgName' value='"+target.data('name')+"'>";
+                       str += "<input type='hidden' name='imageDTOList["+i+"].uuid' value='"+target.data("uuid")+"'>";
+                       str += "<input type='hidden' name='imageDTOList["+i+"].path' value='"+target.data("path")+"'>";
+                    });
+
+                    $(".box").html(str);
+                    $("form").submit();
+
+                });
+
 
             });
         </script>
