--- a/src/main/resources/templates/movie/read.html
+++ b/src/main/resources/templates/movie/read.html
@@ -62,9 +62,147 @@
             Review Count <span class="badge badge-light">[[${dto.reviewCnt}]]</span>
         </button>
 
+        <button type="button" class="btn btn-info addReviewBtn">Review Register</button>
+
+        <div class="list-group reviewList">
+
+        </div>
+
+        <div class="reviewModal modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Movie Review</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label>Reviewer ID</label>
+                            <input type="text" class="form-control" name="mid">
+                        </div>
+                        <div class="form-group">
+                            <label>GRADE<span class="grade"></span></label>
+                            <div class="starrr"></div>
+                        </div>
+                        <div class="form-group">
+                            <label>REVIEW TEXT</label>
+                            <input type="text" class="form-control" name="text" placeholder="Good Movie!">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary reviewSaveBtn">Save changes</button>
+                        <button type="button" class="btn btn-warning modifyBtn">Modify</button>
+                        <button type="button" class="btn btn-danger removeBtn">Remove</button>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- reviewModal -->
+
+        <div class="imageModal modal" tabindex="-2" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Picture</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script th:src="@{/starrr.js}"></script>
+        <link th:href="@{/css/starrr.css}" rel="stylesheet">
+        <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
         <script>
             $(document).ready(function (e){
 
+                var grade = 0;
+                var mno = [[${dto.mno}]];
+
+                console.log("mno: " + mno);
+
+                $(".starrr").starrr({
+                   rating: grade,
+                   change: function (e, value){
+                       if(value){
+                           console.log(value);
+                           grade = value;
+                       }
+                   }
+                });
+
+                // $(".reviewModal").modal("show");
+
+                var reviewModal = $(".reviewModal");
+                var inputMid = $("input[name='mid']");
+                var inputText = $("input[name=text]");
+
+                $(".addReviewBtn").click(function (){
+                   inputMid.val("");
+                   inputText.val("");
+
+                    $(".removeBtn, .modifyBtn").hide();
+                    $(".reviewSaveBtn").show();
+
+                    reviewModal.modal('show');
+                });
+
+                $(".reviewSaveBtn").click(function (){
+
+                    var data = {
+                        mno: mno, grade: grade, text: inputText.val(), mid: inputMid.val()
+                    };
+
+                    console.log(data);
+
+                    $.ajax({
+                       url: '/reviews/' + mno,
+                       type: "POST",
+                       data: JSON.stringify(data),
+                       contentType: "application/json; charset=utf-8",
+                       dataType: "text",
+                       success: function (result){
+                           console.log("result: " + result);
+                           self.location.reload();
+                       }
+                    });
+                    reviewModal.modal('hide');
+                })  // reviewSaveBtn
+
+                function getMovieReviews(){
+                    function formatTime(str){
+                        var date = new Date(str);
+
+                        return date.getFullYear() + '/' +
+                            (date.getMonth() +1) + '/' +
+                            date.getDate() + ' ' +
+                            date.getHours() + ":" +
+                            date.getMinutes();
+                    }
+                    $.getJSON("/reviews/" + mno + "/all", function (arr){
+                       var str = "";
+                       $.each(arr, function (idx, review){
+                          console.log(review);
+                          str += ' <div class="card-body" data-reviewnum='+review.reviewnum+' data-mid='+review.mid+'>';
+                          str += ' <h5 class="card-title">'+review.text+'<span>'+review.grade+'</span> </h5>';
+                          str += ' <h6 class="card-subtitle m6-2 text-muted">'+review.nickname+'</h6>';
+                          str += ' <p class="card-text">'+formatTime(review.regDate)+'</p>';
+                          str += '</div>';
+                       });
+                       $(".reviewList").html(str);
+                    });
+                }
+                getMovieReviews();
             });
         </script>
     </th:blcok>
